--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ body[data-nav-mobile="true"] .site__header {
     padding-right: 0.5rem; }
 
 .site__header[data-header-sticky='true'] {
-  z-index: 1;
+  z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
